# reset-era

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  server.js  turbo.json
_legacy/content/: 30-posts.md
_legacy/db/: schema.sql
_legacy/docs/: supabase-setup.sql
_legacy/src/: app.js  index.html
apps/api/: pyproject.toml
apps/api/app/: main.py
apps/api/app/core/: config.py
apps/api/app/db/: models.py  session.py
apps/api/app/llm/: schemas.py
apps/api/app/routes/: dumps.py  plans.py  reflections.py  tasks.py
apps/api/app/services/: deep_freeze_service.py  intake_service.py  planning_service.py  stuck_service.py
apps/api/tests/: test_dumps.py  test_plans.py
apps/web/: next.config.ts  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/(app)/execution/: page.tsx
apps/web/app/(app)/freezer/: page.tsx
apps/web/app/(app)/reflection/: page.tsx
apps/web/app/(marketing)/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/dump/: page.tsx
apps/web/app/plan/: page.tsx  plan-client.tsx
apps/web/components/app/: BrutalThree.tsx  CompletionReflection.tsx  StuckModal.tsx  ZenVault.tsx
apps/web/components/landing/: full-landing.tsx
apps/web/lib/: api-client.ts
content/: gumroad-copy.md
docs/: notion-template-guide.md
docs/engineering/: architecture.md
docs/product/: prd.md
infra/docker/: docker-compose.yml
infra/supabase/: policies.sql  schema.sql  seed.sql
pages/api/: reset.js
src/: styles.css  success.html
