[project]
name = "api"
version = "0.1.0"
description = "Reset Era FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "pgvector>=0.3.0",
  "alembic>=1.13.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0"
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.0.0",
  "ruff>=0.5.0"
]
